# hackedsolanaatm

./: .replit  Anchor.toml  Cargo.toml  NETLIFY_DEPLOYMENT.md  compile-only.cjs  deploy-ethereum.js  deploy-keypair.json  hardhat.config.cjs  hardhat.config.js  netlify.toml  package-lock.json  package.json  replit.nix  tailwind.config.ts  test-stake-webhook.json  test-wallet.json  theme.json  token-keypair-original.json  token-keypair.json  vite.config.netlify.ts  vite.config.ts
attached_assets/: Pasted--1-Update-stakeExistingTokens-function-In-your-project-s-anchor-ts-or-similar-find-stakeExistingTo-1745263879417.txt  Pasted--Attempting-to-deserialize-transaction-CreateStakingTransactionV2-ts-179-Successfully-deserializ-1745006862783.txt  Pasted--Fix-Checklist-for-Solana-sendTransaction-Unexpected-error-1-Log-Everything-Right-Before-sendTr-1745000706218.txt  Pasted--Starting-staking-process-DirectStakingWidget-tsx-98-Wallet-public-key-9qELzct4XMLQFG8CoAsN4Z-1745012349898.txt  Pasted--Starting-staking-process-DirectStakingWidget-tsx-98-Wallet-public-key-9qELzct4XMLQFG8CoAsN4Z-1745266046130.txt  Pasted--workspace-npm-install-legacy-peer-deps-npm-warn-deprecated-safe-event-emitter-1-0-1-Renamed-t-1744154126075.txt  Pasted-1-On-Chain-Referral-Tracking-Best-Practice-Track-referrals-directly-on-chain-so-there-s-no-manual-1744477684779.txt  Pasted-1-Smart-Contract-for-Staking-and-Referral-Fees-We-have-a-staking-smart-contract-in-place-When-a--1744491737747.txt  Pasted-8-48-17-PM-express-GET-api-staking-info-9qELzct4XMLQFG8CoAsN4Zx7vsZHEwBxoVG81tm4ToQX-200-in-1624m-1744923174539.txt  Pasted-Attempting-to-deserialize-transaction-CreateStakingTransactionV2-ts-179-Successfully-deserialized--1745008264511.txt  Pasted-Building-error-E0599-no-method-named-get-found-for-struct-InitializeBumps-in-the-current-s-1745082422892.txt  Pasted-Check-Wallet-Connection-and-Permissions-Is-the-wallet-connected-properly-Ensure-that-the-wallet-is--1745013083449.txt  Pasted-CreateStakingTransactionV3-ts-246-Error-creating-staking-transaction-TypeError-Cannot-read-prope-1745267384133.txt  Pasted-Creating-connection-to-Solana-devnet-User-token-account-address-H3HzzDFaKW2cdXFmoTLu9ta4CokKu5nSCf-1744921906974.txt  Pasted-Ensure-Proper-Serialization-of-Transaction-The-Transaction-object-needs-to-be-serialized-correctly-b-1745015577771.txt  Pasted-Error-building-sending-transaction-TypeError-Buffer-alloc-is-not-a-function-at-combined-smart--1745006123491.txt  Pasted-Error-creating-staking-transaction-TypeError-Cannot-read-properties-of-undefined-reading-bn--1745268272093.txt  Pasted-Error-in-buy-and-stake-process-SyntaxError-Unexpected-token-DOCTYPE-is-not-valid-JSON-1745002185153.txt  Pasted-Great-Now-that-we-have-the-webhook-secret-set-up-here-s-how-to-configure-the-Authentication-Header-1744622651017.txt  Pasted-Hacked-ATM-Token-Overview-Token-Name-Hacked-ATM-Token-Type-Solana-based-token-with-a-bu-1744054185483.txt  Pasted-Initializing-Referral-Tracker-client-referral-tracker-client-ts-248-Fetching-detailed-referral-info--1745001281665.txt  Pasted-It-seems-that-there-could-be-several-places-where-the-issue-might-be-occurring-Here-are-some-possib-1744406780680.txt  Pasted-Provider-created-successfully-creating-program-instance-Error-creating-staking-program-TypeErr-1744921698093.txt  Pasted-SolanaContext-tsx-130-WalletSendTransactionError-Unexpected-error-at-StandardWalletAdapter-send-1745015210302.txt  Pasted-SolanaContext-tsx-130-WalletSendTransactionError-Unexpected-error-at-async-Object-sendTransact-1745012881906.txt  Pasted-Starting-simple-staking-process-SimpleStakingWidget-tsx-95-Wallet-public-key-9qELzct4XMLQFG8CoAsN4Z-1745083792364.txt  Pasted-Starting-simple-staking-process-SimpleStakingWidget-tsx-96-Wallet-public-key-9qELzct4XMLQFG8CoAsN4-1745088038807.txt  Pasted-Starting-simple-staking-process-SimpleStakingWidget-tsx-96-Wallet-public-key-9qELzct4XMLQFG8CoAsN4Z-1745088625055.txt  Pasted-Starting-staking-process-DirectStakingWidget-tsx-97-Wallet-public-key-9qELzct4XMLQFG8CoAsN4Zx7vs-1745006874551.txt  Pasted-Starting-staking-process-DirectStakingWidget-tsx-97-Wallet-public-key-9qELzct4XMLQFG8CoAsN4Zx7vs-1745008288982.txt  Pasted-The-error-you-re-seeing-Signature-verification-failed-suggests-that-there-is-an-issue-with-the-s-1744410760927.txt  Pasted-This-usually-happens-when-You-re-trying-to-call-a-function-instruction-that-doesn-t-exist-in-you-1745243207209.txt  Pasted-Transaction-simulation-failed-InstructionError-Array-2-overrideMethod-hook-js-608-stakeExisti-1745016950803.txt  Pasted-Transaction-status-Sending-transaction-to-the-network-SolanaContext-tsx-130-WalletSendTransactio-1745004649000.txt  Pasted-Using-enhanced-transaction-handling-for-buy-and-stake-CreateStakingTransactionV2-ts-56-Starting-b-1745003046970.txt  Pasted-Using-enhanced-transaction-handling-for-buy-and-stake-CreateStakingTransactionV2-ts-68-Starting-b-1745003579640.txt  Pasted-Using-enhanced-transaction-handling-for-buy-and-stake-CreateStakingTransactionV2-ts-75-Starting-b-1745003909801.txt  Pasted-WalletSendTransactionError-Unexpected-error-at-StandardWalletAdapter-sendTransaction-chunk-HMI-1745015501238.txt  Pasted-WalletSendTransactionError-Unexpected-error-at-async-Object-sendTransaction-SolanaContext-tsx-1745013297848.txt  (+26 more)
client/: index.html  test-pda.html
idl/: README.md  (+3 more)
programs/referral-staking/: Cargo.toml  README.md
programs/referral-staking/src/: lib-complete.rs  lib-final.rs  lib.rs
programs/referral-tracker/: Cargo.toml
programs/referral-tracker/src/: lib.rs
programs/staking-vault/: BUILD_INSTRUCTIONS.md  Cargo.toml  Cargo.toml.template  README.md
programs/staking-vault/src/: lib.rs  lib.rs.simple  lib.rs.template
(+231 files in other folders)
