[workspace]
members = [
    "programs/staking-vault",
    "programs/referral-tracker",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "=1.16.18"
solana-address-lookup-table-interface = "=1.16.18"
spl-token = "=3.5.0"
spl-associated-token-account = "=1.1.3"
thiserror = "1.0.48"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
solana-program = { version = "=1.16.18" }
solana-address-lookup-table-interface = { version = "=1.16.18" }
anchor-lang = { version = "=0.29.0" }
anchor-spl = { version = "=0.29.0" }
spl-token = { version = "=3.5.0" }
spl-associated-token-account = { version = "=1.1.3" }