[workspace]
members = [
    "programs/staking-vault",
    "programs/referral-tracker",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
solana-program = "1.14.17"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"
thiserror = "1.0.48"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# No patches or overrides needed with this older version set