[package]
name = "referral-tracker"
version = "0.1.0"
description = "HackATM Token Referral System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "referral_tracker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
solana-address-lookup-table-interface = { version = "1.16.18", features = ["full"] }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
thiserror = { workspace = true }