[package]
name = "staking-vault"
version = "0.1.0"
description = "HackATM Token Staking Vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
thiserror = { workspace = true }